test for raw file open